clang/test/BSC/Negative/borrow_owned_mixed.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test cases for structs with both borrow and owned fields
// Rule: borrow fields MUST be initialized, owned fields CAN be uninitialized

struct BorrowAndOwned {
    int *borrow b;
    int *owned o;
};

void test_basic_mixed() {
    int x = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct BorrowAndOwned m1;  // borrow field not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct BorrowAndOwned m2 = {};  // borrow field not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct BorrowAndOwned m3 = {.o = nullptr};  // borrow field not initialized

    // OK: borrow initialized, owned can be uninitialized
    struct BorrowAndOwned m4 = {.b = &mut x};

    // OK: both initialized
    struct BorrowAndOwned m5 = {.b = &mut x, .o = nullptr};

    // OK: positional
    struct BorrowAndOwned m6 = {&mut x, nullptr};
}

struct MultipleMixed {
    int *borrow b1;
    int *owned o1;
    int *borrow b2;
    int *owned o2;
};

void test_multiple_mixed() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct MultipleMixed m1;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct MultipleMixed m2 = {.b1 = &mut x};  // b2 not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct MultipleMixed m3 = {.b1 = &mut x, .o1 = nullptr};  // b2 not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct MultipleMixed m4 = {.o1 = nullptr, .o2 = nullptr};  // both borrow not initialized

    // OK: all borrow initialized, owned can be left out
    struct MultipleMixed m5 = {.b1 = &mut x, .b2 = &mut y};

    // OK: all initialized
    struct MultipleMixed m6 = {.b1 = &mut x, .o1 = nullptr, .b2 = &mut y, .o2 = nullptr};
}

struct InnerMixed {
    int *borrow b;
    int *owned o;
};

struct OuterMixed {
    int a;
    struct InnerMixed inner;
    int *owned outer_o;
};

void test_nested_mixed() {
    int x = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct OuterMixed o1;  // inner.b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct OuterMixed o2 = {.a = 1};  // inner.b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct OuterMixed o3 = {.a = 1, .outer_o = nullptr};  // inner.b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct OuterMixed o4 = {.a = 1, .inner = {.o = nullptr}};  // inner.b not initialized

    // OK: borrow initialized, owned fields can be omitted
    struct OuterMixed o5 = {.a = 1, .inner = {.b = &mut x}};

    // OK: all initialized
    struct OuterMixed o6 = {.a = 1, .inner = {.b = &mut x, .o = nullptr}, .outer_o = nullptr};

    // OK: positional
    struct OuterMixed o7 = {1, {&mut x, nullptr}, nullptr};
}

struct Level3Mixed {
    int *borrow b;
    int *owned o;
};

struct Level2Mixed {
    int *owned o;
    struct Level3Mixed l3;
};

struct Level1Mixed {
    int *borrow b;
    struct Level2Mixed l2;
};

void test_deep_mixed() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Level1Mixed v1;  // l1.b and l2.l3.b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Level1Mixed v2 = {.b = &mut x};  // l2.l3.b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Level1Mixed v3 = {.b = &mut x, .l2 = {.o = nullptr}};  // l2.l3.b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Level1Mixed v4 = {.l2 = {.l3 = {.b = &mut y}}};  // l1.b not initialized

    // OK: all borrow fields initialized
    struct Level1Mixed v5 = {.b = &mut x, .l2 = {.l3 = {.b = &mut y}}};

    // OK: all fields initialized
    struct Level1Mixed v6 = {.b = &mut x, .l2 = {.o = nullptr, .l3 = {.b = &mut y, .o = nullptr}}};
}

struct Interleaved {
    int *owned o1;
    int *borrow b1;
    int regular;
    int *owned o2;
    int *borrow b2;
    int *owned o3;
};

void test_interleaved() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Interleaved i1;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Interleaved i2 = {.o1 = nullptr, .regular = 0};  // borrow fields not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Interleaved i3 = {.b1 = &mut x};  // b2 not initialized

    // OK: all borrow initialized, owned can be omitted
    struct Interleaved i4 = {.b1 = &mut x, .b2 = &mut y};

    // OK: all initialized
    struct Interleaved i5 = {.o1 = nullptr, .b1 = &mut x, .regular = 0,
                              .o2 = nullptr, .b2 = &mut y, .o3 = nullptr};

    // OK: positional
    struct Interleaved i6 = {nullptr, &mut x, 0, nullptr, &mut y, nullptr};
}

struct ConstBorrowOwned {
    const int *borrow cb;
    int *borrow b;
    int *owned o;
};

void test_const_borrow_owned() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct ConstBorrowOwned c1;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct ConstBorrowOwned c2 = {.cb = &const x};  // b not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct ConstBorrowOwned c3 = {.b = &mut y};  // cb not initialized

    // OK: both borrow initialized
    struct ConstBorrowOwned c4 = {.cb = &const x, .b = &mut y};

    // OK: all initialized
    struct ConstBorrowOwned c5 = {.cb = &const x, .b = &mut y, .o = nullptr};
}

struct Node {
    int *owned data;
    int *borrow parent;
    struct {
        int *borrow left;
        int *borrow right;
    } children;
};

void test_tree_node() {
    int p = 0, l = 0, r = 0;

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Node n1;  // borrow fields not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Node n2 = {.data = nullptr};  // borrow fields not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Node n3 = {.parent = &mut p};  // children not initialized

    // expected-error@+1 {{variable declarations of borrow qualified must be initialized}}
    struct Node n4 = {.parent = &mut p, .children = {.left = &mut l}};  // right not initialized

    // OK: all borrow initialized
    struct Node n5 = {.parent = &mut p, .children = {.left = &mut l, .right = &mut r}};

    // OK: with owned field too
    struct Node n6 = {.data = nullptr, .parent = &mut p,
                      .children = {.left = &mut l, .right = &mut r}};
}
